 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.3:

 - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)
 - [ZBX-57] Problem in zbx_tcp_check_security 127.0.0.1 != 127.0.00.1 (Sasha)
 - [ZBX-80] Master node does not display configuration of slave nodes (Sasha)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes for PostgresSQL (Sasha)
 - [ZBX-77] fixes for refreshing page in Monitoring (Artem)
 - [ZBX-75] fixed problem with occured warning in events (Artem)
 - [ZBX-68] fixed iframe resize on refresh in Screens (Artem)
 - [ZBX-65] fixed sideeffect on massupdate items, 'application' entries are cleaned from all affected items" (Artem)
 - fixed setting trigger status to unknown on trigger update, now only if expression is changed (Artem)
 - fixed problem with Enabling/Disabling actions (Artem)
 - [ZBX-72] fixed occured error after graph refresh (Artem)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes (Sasha)
 - [ZBX-71] added separation of "other" by node and host in "latest data" (Artem)
 - [ZBX-70] fixed even more compilation warnings (Alexei)
 - [ZBX-69] eliminated compilation warnings "_GNU_SOURCE redefined" (Alexei)
 - [DEV-19] Add support of IPv6 for windows agent (Sasha)
 - [DEV-23] Autodiscovery for IPv6 (Sasha)
 - [DEV-17] Add support of IPv6 to standard library (comms.c) (Sasha)
 - [DEV-21] extended size of IP fields to accept IPv6 style IPs (Alexei)
 - [DEV-21] added basic validation of IPv6 IP addresses in GUI (Alexei)
 - [DEV-18] database schema enhanced for IPv6 addresses (Alexei)
 - [DEV-20] support of --enable-ipv6 for configure.in (Alexei)