@@ -13,6 +13,7 @@ Changes for 1.5:
 
 Changes for 1.4.3:
 
+ - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)
  - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)
  - [ZBX-57] Problem in zbx_tcp_check_security 127.0.0.1 != 127.0.00.1 (Sasha)
  - [ZBX-80] Master node does not display configuration of slave nodes (Sasha)
